--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -35,7 +35,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 0.1875rem; /* 3px полоска */
+  height: 0.1875rem;
   background-color: var(--accent-color);
   border-radius: 2px;
 }
